// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render a title 1`] = `
<div
  className="system-info-section"
>
  <table
    className="data zebra"
  >
    <tbody>
      <tr
        key="foo"
      >
        <td
          className="thin"
        >
          <div
            className="system-info-section-item-name"
          >
            foo
          </div>
        </td>
        <td
          style={
            Object {
              "wordBreak": "break-all",
            }
          }
        >
          <SysInfoItem
            name="foo"
            value="bar"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`should render correctly 1`] = `
<div
  className="system-info-section"
>
  <h4
    className="spacer-bottom"
  >
    foo
  </h4>
  <table
    className="data zebra"
    id="foo"
  >
    <tbody>
      <tr
        key="foo"
      >
        <td
          className="thin"
        >
          <div
            className="system-info-section-item-name"
          >
            foo
          </div>
        </td>
        <td
          style={
            Object {
              "wordBreak": "break-all",
            }
          }
        >
          <SysInfoItem
            name="foo"
            value={1}
          />
        </td>
      </tr>
      <tr
        key="bar"
      >
        <td
          className="thin"
        >
          <div
            className="system-info-section-item-name"
          >
            bar
          </div>
        </td>
        <td
          style={
            Object {
              "wordBreak": "break-all",
            }
          }
        >
          <SysInfoItem
            name="bar"
            value="Bar"
          />
        </td>
      </tr>
      <tr
        key="baz"
      >
        <td
          className="thin"
        >
          <div
            className="system-info-section-item-name"
          >
            baz
          </div>
        </td>
        <td
          style={
            Object {
              "wordBreak": "break-all",
            }
          }
        >
          <SysInfoItem
            name="baz"
            value={false}
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
